--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -1,113 +1,275 @@
+%
+% AGRANDA 2016 Camera ready version!
+%
+
+\documentclass{article}%{llncs}
+
+\usepackage{graphicx}
+\usepackage[space]{grffile}
+\usepackage{latexsym}
+\usepackage{textcomp}
+\usepackage{longtable}
+\usepackage{booktabs}
+% \usepackage{row}
+\usepackage{amsfonts,amsmath,amssymb} %paquetes de matematica
+\usepackage{amsthm}
+\usepackage{url}
+% \usepackage{hyperref}d
+% \hypersetup{colorlinks=false,pdfborder={0 0 0}}
+% You can conditionalize code for latexml or normal latex using this.
+% \newif\iflatexml\latexmlfalse
+\usepackage[utf8]{inputenc}
+\usepackage[english]{babel}
+\usepackage{algorithm2e}
+\usepackage{qtree}
+\usepackage{amssymb}
+\usepackage{hyperref}
+
+% \setcounter{tocdepth}{3}
+%\usepackage{graphicx}
+% \usepackage{subfigure}
+\usepackage{nicefrac}
+
+% for confusion matrix building
+\usepackage{array}
+\usepackage{multirow}
+
+\newcommand\MyBox[2]{
+\fbox{\lower0.75cm
+	\vbox to 1.7cm{\vfil
+		\hbox to 1.7cm{\hfil\parbox{1.4cm}{#1\\#2}\hfil}
+		\vfil}%
+}%
+}
+
+
+% mathcal certain letters
+\newcommand{\calG}{\mathcal{G}}
+\newcommand{\calN}{\mathcal{N}}
+\newcommand{\calE}{\mathcal{E}}
+\newcommand{\calL}{\mathcal{L}}
+
+% \renewcommand{\labelitemi}{$\bullet$}
+\setlength{\tabcolsep}{6pt}
+
+%comandos de operadores de esperanza, varianza etc.
+%\newcommand{\Expect}{{\rm I\kern-.3em E}}
+\newcommand{\Expect}{{\mathbb{E}}}
+
+\newcommand{\Var}{\mathrm{Var}}
+\newcommand{\Cov}{\mathrm{Cov}} 
+
+%comandos de teoremas, corolarios, lemmas, pruebas y definiciones
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{corollary}{Corollary}[theorem]
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{definition}{Definition}[subsection]
+\theoremstyle{definition}
+
+
+\begin{document}
+
+% \mainmatter  % start of an individual contribution
+% first the title is needed
+\title{Trash Tex file to test different formulas and stuff}
+
+
+
+
+\author{
+	Juan de Monasterio
+	\and Carlos Sarraute
+}
+
+%
+% NB: a more complex sample for affiliations and the mapping to the
+% corresponding authors can be found in the file "llncs.dem"
+% (search for the string "\mainmatter" where a contribution starts).
+% "llncs.dem" accompanies the document class "llncs.cls".
+%
+
+%\toctitle{Lecture Notes in Computer Science}
+%\tocauthor{Uncovering the Diffusion of an Infectious Disease with Mobile Phone Data
+%%Unveiling Chagas with Big Data}
+
+\maketitle
+\begin{abstract}
+	
+	Texstudio is better at helping to write fast tex documents using spell-checkers, pre-loaded commands and \textit{stuff}. All of the following text is just copy/paste trash being tested before being added to a real doc.
+	
+%%%% HOW TO USE SPLITS IN EQUATIONS (same level for equal signs)
+%\begin{split}
+%	var(mr) & =  \Expect_{\Theta, \Theta'} 
+%	\left[ 
+%	cov_{\textbf{x},\textbf{y}}
+%	(rmg(\Theta,\textbf{x},\textbf{y} )rmg(\Theta',\textbf{x},\textbf{y} )) 
+%	\right]
+%\end{split}
+
+%%%% Equations with no \$ chars
+%\[
+%l(\theta) = \sum_{i=1}^N \big(y_i log(P(y_i|x_i,\theta)) + (1-y_i)log(1 - P(y_i|x_i,\theta)) \big)
+%\]
+
+%%%% Equations with no \$ chars
+%\begin{equation}
+%l(\theta) = \sum_{i=1}^N \big(y_i log(P(y_i|x_i,\theta)) + (1-y_i)log(1 - P(y_i|x_i,\theta)) \big)
+%\end{equation}
+
+%\begin{definition}{Vapnik–Chervonenkis (VC) Dimension}
+%\end{definition}
+\end{abstract} 
+
+
 \section{Bias, Variance, Generalization and Model Complexity}\label{section-biasVariance}
 
 In supervised learning settings, the goal is to build a learner with low predictive error. The algorithm's generalization power will then lie on its ability to correctly label samples on independent test data which is has not trained on. Measuring and comparing this ability among models is done to select the best supervised estimator. The generalization error is also known as the prediction error. This is the model's expected error over an independent training set $\mathrm{Ts}$.
 %The best learner will be said to have the lowest \textit{predictive error}. 
 
 In the literature such as \cite{james-biasVarianceGeneral} authors point to two sources responsible for this error, namely the bias and the variance of the learner. And the improvement of one generally leads to a hinder of the other. These errors are central to the prediction error because they point to different weak points in the algorithms. This will result in different ways to tackle each error and controlling both is central to any supervised learning problem.
- 
+
 Conceptually the first type of error relates to the model's accuracy in labeling predictions correctly. This could be either by assigning the sample to its correct class in classification settings or by predicting correctly the sample's target value in a regression setting. It is lower when models correctly learns the underlying structures of the data. However, as models learn more from the available data i.e. the training set, they lose the ability to extend this predictive accuracy to new samples because they \textit{overfit} on the samples available. In this situation we have another type of error which is known as an increase in variance.
- 
- In the generalization error, the loss function  determines how \textit{good} the model's prediction are by quantifying these errors. Given a training set $\mathrm{T} = (X,Y)$, let $\hat{f}(X)$ be the model's predictive function for the features and denote $L( Y,\hat{f(X)} )$ the loss function acting on the data. 
- 
+
+In the generalization error, the loss function  determines how \textit{good} the model's prediction are by quantifying these errors. Given a training set $\mathrm{T} = (X,Y)$, let $\hat{f}(X)$ be the model's predictive function for the features and denote $L( Y,\hat{f(X)} )$ the loss function acting on the data. 
+
 By comparing for each sample the target predictions versus their real values, loss functions give a measure of how strong classifiers are with respect to their predictions. These can be characterized as semimetrics on the target space i.e. functions that are symmetric, non-negative and equal to zero only if both arguments are equal.
+
+\begin{definition}{Prediction Error}
+	$$ PE(\hat{f})= \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X))v\right]$$
+\end{definition}
+
+This is the average error between our model and the target, as quantified by the loss function. To
+
+
+\begin{definition}{Generalization Error}
+	The generalization error is also known as the training prediction error. Given that any model is always built on the data, this value is the model's error over an independent training set $\mathrm{Ts}$:
+	$$ Err_{\mathrm{T}} =  \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X)) |  \mathrm{T}\right]$$
+\end{definition}\footnote{Note that in this definition the expectation is taken conditional on the training set and also from which the model is fit.}
+
+Historically the errors due to bias and variance where associated directly with the squared loss function which is defined as $L(z,w) = \left\Vert z-w \right\Vert^2_2$. This function was favored over other functions because of its analytical advantages.  The generalization for this case is
+
+\begin{equation}\label{squaredPE}
+PE = \Expect_X \Expect_{Y|X} \left[ \left\Vert  Y - \hat{f}(X)  \right\Vert_2^2 \right]
+\end{equation}
+
+It is not difficult to see that the model that minimizes this error is $\hat{f}(x) = \Expect \left[ Y | X=x \right] $. Suppose now that there exists a true functional relation $Y = f(X) + \epsilon$. 
+In this simple scenario, $\epsilon$ is the noise, with a fixed variance $\sigma^2$ and $0$ mean. Our model $\hat{f}$ will be an estimate of this true relation, constructed from the data. And for this loss function, its error $\Expect \left[ \left\Vert Y  - \hat{f}(X) \right\Vert_2^2 \right]$ can be decomposed in the following way:
+
+\begin{equation}\label{squaredBiasDecomposition}
+PE( \hat{f} ) = \Expect_X \left[   f(X)  - \hat{f}(X) \right]^2 +  \Expect_X \left[ \hat{f}(X)^2  \right] - \Expect_X \left[ \hat{f}(X)  \right]^2  + \sigma^2
+= Bias(\hat{f})^2 + Var(\hat{f}) + \sigma^2
+\end{equation}
+
+Equation \ref{squaredBiasDecomposition} is referred to as the \textit{bias-variance decomposition for the squared loss}. The first term is called the square of the bias of the estimator. It measures how well off are our estimator's predictions compared to the true relational function. On the other hand, the second and third terms are the variance of the estimator. This will measure how will this random variable vary along its most expected non-random value. The noise's variance term is that part of the prediction error which is irreducible. Note that we have already taken the expectation over the target and that is why we are left with the target's noise. This part of the error we can not minimize or control with our learner. It is due to the random nature of the problem.
+
+For more general loss functions other than the squared error, a generalized notion of bias and variance is found in \cite{james-biasVarianceGeneral}. The author defines what properties should be displayed by the bias and variance of any estimator. 
+\begin{definition}{Systematic Value}
+	Given a training set $\mathrm{T}$, a loss function $L(\cdot)$ and an estimator a random variable $Z$, the systematic value or systematic component of this variable is 
+	$$ SZ  =  arg \ min_u \Expect_{Z} \left[ L(u,Z) \right]$$
+\end{definition}
+
+This definition gives the systematic value as the nearest constant value to the random variable, with the measure as given by the loss function.
+
+%The systematic value for the input and target variable then the same way as with the squared loss function, where the expectation is over the target's distribution. 
+
+In a general setting, the bias should be the measure of the systematic difference in which a random variable differs from a particular target value and it also should be the measure of how much this systematic difference contributes to the error. 
+
+On the other hand the variance of an estimator should measure the spread of the estimator around its systematic component and it should also be the effect this variance has on the prediction. In this sense, the author then defines the variance and bias of the learner to be:
+
+\begin{equation}
+\begin{split}
+& Bias(\hat{f})^2 = L(S\hat{f},SY)) \\
+& Var(\hat{f}) = \Expect_{\hat{f}} \left[  L(\hat{f}  , S\hat{f}) \right]
+\end{split}
+\end{equation}
+
+Note that with this definitions the variance is an operator defined only for the estimator and which is null only when the predictor is a constant value for any training set. As such, it is unchanged by new data. The bias on the other hand is an operator built form the systemic values of $Y$ and $\hat{f}$ and is null only if both of this values are equal.
+
+
+The generalized bias-variance decomposition now takes the following form:
+
+\begin{equation}
+\begin{split}
+\Expect_{X,Y} \left[ L(\hat{f}(X),Y )\right] = &  \Expect_{Y} \left[ L(SY,Y )\right] + \\
+			  &  \Expect_{Y} \left[ L(S\hat{f}(X),Y ) - L(SY,Y )\right] + \\
+			  &  \Expect_{Y,X} \left[ L(\hat{f}(X),Y ) - L(S\hat{f}(X),Y )\right]
+\end{split}
+\end{equation}
  
- \begin{definition}{Generalization Error}
- 	The generalization error is also known as the prediction error. Given that any model is always built on the data, this value is the model's expected error over an independent training set $\mathrm{Ts}$:
- 	$$ Err_{\mathrm{T}} =  EPE(\hat{f})= \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X)) |  \mathrm{T}\right]$$
- \end{definition}\footnote{Note that in this definition the expectation is taken conditional on the training set and also from which the model is fit.}
+Note here that the first term is equivalent to the variability of the target variable with respect to its systematic value, the second term is the expected bias between the systematic values of $Y$ and $\hat{f}(X)$ and the third term is the expected variablity between $Y$ and $\hat{f}(X)$. 
+% $\Expect_{Y} \left[ L(SY,Y )\right]$
  
- Historically the errors due to bias and variance where associated directly with the squared loss function which is defined as $L(z,w) = \left\Vert z-w \right\Vert^2_2$. This function was favored over other functions because of its analytical advantages.  The generalization for this case is
+%\begin{equation}\label{squaredBiasDecomposition}
+%PE( \hat{f} ) = \Expect_X \left[   f(X)  - \hat{f}(X) \right]^2 +  \Expect_X \left[ \hat{f}(X)^2  %\right] - \Expect_X \left[ \hat{f}(X)  \right]^2  + \sigma^2
+%= Bias(\hat{f})^2 + Var(\hat{f}) + \sigma^2
+%\end{equation}
  
- \begin{equation}\label{squaredEPE}
- EPE = \Expect_X \Expect_{Y|X} \left[ \left\Vert  Y - \hat{f}(X)  \right\Vert_2^2 \right]
- \end{equation}
  
- It is not difficult to see that the model that minimizes this error is $\hat{f}(x) = \Expect \left[ Y | X=x \right] $. Suppose now that there exists a true functional relation $Y = f(X) + \epsilon$. 
- In this simple scenario, $\epsilon$ is the noise, with a fixed variance $\sigma^2$ and $0$ mean. Our model $\hat{f}$ will be an estimate of this true relation, constructed from the data. And for this loss function, its error $\Expect \left[ \left\Vert Y  - \hat{f}(X) \right\Vert_2^2 \right]$ can be decomposed in the following way:
- 
- \begin{equation}\label{squaredBiasDecomposition}
- EPE( \hat{f} ) = \Expect \left[   f(X)  - \hat{f}(X) \right]^2 +  \Expect \left[ \hat{f}(X)^2  \right] - \Expect \left[ \hat{f}(X)  \right]^2  + \sigma^2
- = Bias(\hat{f})^2 + Var(\hat{f}) + \sigma^2
- \end{equation}
- 
- Equation \ref{squaredBiasDecomposition} is referred to as the bias-variance decomposition for the squared loss. The first term is called the square of the bias of the estimator. It measures how well off are our estimator's predictions compared to the true relational function. On the other hand, the second and third terms are the variance of the estimator. This will measure how will this random variable vary along its most expected non-random value. The noise's variance term is that part of the prediction error which is irreducible. This means this is part of the random nature of the problem and one for which the estimator cannot lower.
- 
- For more general loss functions other than the squared error, a generalized notion of bias and variance is found in \cite{james-biasVarianceGeneral}. The author defines what properties should be displayed by the bias and variance of any estimator. 
- \begin{definition}{Systematic Value}
- 	Given a training set $\mathrm{T}$, a loss function $L(\cdot)$ and an estimator $\hat{f}$ built from the data, the systematic value or systematic component of a learner is 
- 	$$ S\hat(f)  =  arg \ min_u \Expect_{\textbf{X}} \left[ L(u,\hat{f}(X)) \right]$$
- \end{definition}
- 
- The systematic value for the target variable $SY$ is defined in the same way, where the expectation is over the target's distribution. 
- 
- In the general setting, the criteria the bias should comply is to measure the systematic difference in which a random variable differs from a particular target value and also the measure of how much this systematic difference contributes to the error. On the other hand the variance of an estimator should measure the spread of the estimator around its systematic component and also the effect this variance has on the prediction. The author then defines variance and bias to be:
- 
- \begin{equation}
- \begin{split}
- & Bias(\hat{f})^2 = L(S\hat{f},SY)) \\
- & Var(\hat{f}) = \Expect_{\hat{f}} \left[  L(\hat{f}  , S\hat{f}) \right]
- \end{split}
- \end{equation}
- 
- Note that with this definitions the variance is an operator defined only for the estimator and which is null only when the predictor is a constant value for any training set. As such, it is unchanged by new data. The bias on the other hand is an operator built form the systemic values of $Y$ and $\hat{f}$ and is null only if both of this values are equal.
- 
- One is that it represents the systematic difference between a random
- variable and a particular value, e.g. the target, and the other is the degree to which a random variable systematically aligns over a particular value.
- %to which that difference in value contributes to error.
- %The variance of a model is then 
- 
+%One is that it represents the systematic difference between a random
+%variable and a particular value, e.g. the target, and the other is the degree to which a random variable systematically aligns over a particular value.
+%to which that difference in value contributes to error.
+%The variance of a model is then 
+
 % For the variance, the author argues that it should measure the 
- %It then 
- 
- In supervised classification loss functions are also called \textit{metrics} and they origin from \textit{Type I \& Type II} errors common in statistics but have different meanings in this context.  There are a number of different variations of metrics where different problem settings might require different more suitable metrics to be used. Here $Y$ will be taking any of the values in the class set $\calG$ and we will denote $K = |\calG|$ as the number of classes.
- 
+%It then 
+
+In the case of supervised classifiers, loss functions are also called \textit{metrics} and they origin from \textit{Type I \& Type II} errors common in statistics but have different meanings in this context.  There are a number of different variations of metrics where different problem settings might require different more suitable metrics to be used. Here $Y$ will be taking any of the values in the class set $\calG$ and we will denote $K = |\calG|$ as the number of classes. Since we are trying to correctly label samples, the most common loss function used in this context is $L(Y, \hat{f}(X)) = I(Y \neq \hat{f}(X))$. 
 % In multi-class supervised problem setting, 
- 
- \begin{definition}{Expected Prediction Error}
- 	Related to the generalization error, the expected prediction error is the expectation of the generalization error:
- 	$$ EPE = \Expect \left[ L(Y,\hat{f}(X))\right] =  \Expect \left[ Err_{\mathrm{T}}  \right]$$
- \end{definition}
- 
-Here the expectation is taken over all the random elements of this process including the samples and the model fit from these. 
- 
- In a supervised learning context, the estimation of these errors will be of most importance for the assessment of the models. Given that we will be working only with information from the training set, we only have access to a limited amount of samples. 
- Then estimation of the second error will be, in most cases, not possible. Therefore we must estimate the true prediction error: 
- 
- By conditioning on the training set we may rewrite the above formula as 
- 
- \begin{equation}\label{classificationEPE}
- EPE = \Expect_x\left[ \sum_{k=1}^{K} L( Y_K , \hat{f}(X) ) P(Y_k|X) \right]
- \end{equation}
- 
- 
- \begin{definition}{Training Error}
- 	is the average loss over the training set
- 	$$ \overline{err} = \frac{1}{N} \sum_i=1^N L(y_i, \hat{f}(x_i) )$$
- \end{definition}
- 
- 
- For the next part, \textbf{x} $\in \mathbb{R}^{p}$ will denote a random input variable and \textbf{y}  $\in \mathbb{R}$ will denote a random output variable with joint distribution $P\left(\textbf{x},\textbf{y}\right)$.
- 
- We define $EPE\left(f \right) = \Expect\left[L\left(\textbf{y} - f(\textbf{x}) \right) \right] $ where $L(y,f\left(x\right))$ is called the loss-function which is a \textbf{semimetric} chosen to penalize errors in prediction. In general a quadratic or absolute value functions are chosen, where the first is more favored for its smoothness. 
- 
- 
- Models are evaluated according to their performance in these two errors in training and testing datasets. Combinations of high or low values for these, across training and test data, are used as model evaluation and highlight aspects to be improved. 
- 
- For example, a very common scenario is having a model that has high overall variance and low bias. 
- It is said that a learner overfits a training set $\mathcal{T}$ if it fits parameter $\hat{\theta}$ while there $\exists \theta^*$ such that
- \begin{equation} \label{eq:overfitting}
- Error_{train}(\hat{\theta}) < Error_{train}(\theta^*) \  and \ Error_{test}(\theta^*) < Error_{test}(\hat{\theta})   
- %\sum_{i=0}^{\infty} a_i x^i
- \end{equation}
- 
- Once the model was fit on the training set, it overfits when predictions on training samples are very accurate whilst predictions on new samples spread out and raise the value of the error. The model has learned very well from the training data but fails to be accurate on new samples.
- 
- A trivial algorithm that would 
- 
- An opposite scneario scenario occurs when
- 
- 
- rise Typical combinations
- The four possible combinations of high 
- 
+
+Then we would have that $SY = \arg max_{1\leq i \leq K} P(Y=i)$ and $S\hat{f}(X) = \arg max_{1\leq i \leq K} P(\hat{f}(X)=i)$. It is also straightforward to see that $Var(Y) = 1 - P(Y=SY)$ and $Var(\hat{f}(X)) = 1 -  P(X = S\hat{f}(X)) $. 
+
+With the above we have that the decomposition of the prediction error for this case becomes
+$$Var(Y) + P(Y=SY)  - \sum_{i=1}^K P(\hat{f}(X) =i)P(Y=i)$$ which again relies heavily on the variability of the target and on how well the classifier approximates the labels.
+
+%S\hat{f}(X)
+
+%Let 
+
+
+
+\begin{definition}{Expected Prediction Error}
+	Related to the generalization error, the expected prediction error is the expectation of the generalization error:
+	$$ EPE = \Expect_{X,Y} \left[ L(Y,\hat{f}(X))\right] =  \Expect \left[ Err_{\mathrm{T}}  \right]$$
+\end{definition}
+
+Here the expectation is taken over all the random elements of this process including the samples and the model fit from these. By conditioning on the training set we may rewrite the above formula as 
+
+\begin{equation}\label{classificationEPE}
+EPE = \Expect_X\left[ \sum_{k=1}^{K} L( Y_K , \hat{f}(X) ) P(Y_k|X) \right]
+\end{equation}
+
+
+\begin{definition}{Training Error}
+	is the average loss over the training set
+	$$ \overline{err} = \frac{1}{N} \sum_i=1^N L(y_i, \hat{f}(x_i) )$$
+\end{definition}
+
+
+For the next part, \textbf{x} $\in \mathbb{R}^{p}$ will denote a random input variable and \textbf{y}  $\in \mathbb{R}$ will denote a random output variable with joint distribution $P\left(\textbf{x},\textbf{y}\right)$.
+
+%We define $EPE\left(f \right) = \Expect\left[L\left(\textbf{y} - f(\textbf{x}) \right) \right] $ where $L(y,f\left(x\right))$ is called the loss-function which is a \textbf{semimetric} chosen to penalize errors in prediction. In general a quadratic or absolute value functions are chosen, where the first is more favored for its smoothness. 
+
+
+We will then look to evaluate models according to their performance in these two errors in training and testing datasets. Combinations of high or low values for these, across training and test data, are used as model evaluation and highlight aspects to be improved. 
+
+For example, a very common scenario is having a model that has high overall variance and low bias. 
+It is said that a learner overfits a training set $\mathcal{T}$ if it fits parameter $\hat{\theta}$ while there $\exists \theta^*$ such that
+\begin{equation} \label{eq:overfitting}
+Error_{train}(\hat{\theta}) < Error_{train}(\theta^*) \  and \ Error_{test}(\theta^*) < Error_{test}(\hat{\theta})   
+%\sum_{i=0}^{\infty} a_i x^i
+\end{equation}
+
+Once the model was fit on the training set, it overfits when predictions on training samples are very accurate whilst predictions on new samples spread out and raise the value of the error. The model has learned very well from the training data but fails to be accurate on new samples.
+
+A trivial algorithm that would 
+
+An opposite scneario scenario occurs when
+
+
+rise Typical combinations
+The four possible combinations of high 
+
+
+
+\end{document}
 
