--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -147,3 +147,5 @@ Given that we can have a high or low variance and bias, there are only four poss
 %An opposite scneario scenario occurs when
 %rise Typical combinations
 %The four possible combinations of high 
+
+The following example illustrates a situation where different models give rise to different bias and variance combinations. It is our task to decide on where to search for better models to lower the expected prediction error.
