--- a/subsection_Brief_comment_on_the__.tex
+++ b/subsection_Brief_comment_on_the__.tex
@@ -1,11 +1,11 @@
 
 
-\subsection{Brief comment on the consistency of the Training Error and the Vapnik–Chervonenkis (VC) Dimension} \label{section-VcDimension}
+\subsection{ Using the Vapnik–Chervonenkis (VC) Dimension for prediction error estimation} \label{section-VcDimension}
 
 \cite{vapnik-nature2013}
 \cite{cherkassky-learning2007}
 
-The Vapnik–Chervonenkis (VC) Dimension is a number based on a theoretical framework now called \textit{Statistical Learning Theory} (SLT). This theory is used to estimate the true expected prediction error from finite samples. Surprisingly, very few assumptions are needed and results are distribution independent. Exact bounds are given for some common use cases with constructive analytical methods. For other cases authors propose sampling or experimental methods to estimate the VC dimension. For this part, most of the results and reasoning follows \cite{cherkassky-learning2007}. For a more broad development of this work, \cite{vapnik-nature2013} is recommended too.
+The Vapnik–Chervonenkis (VC) Dimension is a number based on a theoretical framework now called \textit{Statistical Learning Theory} (SLT). This theory is used to estimate the true expected prediction error from finite samples. Surprisingly, very few assumptions are needed and results are distribution independent. Exact bounds are given for some common use cases with constructive analytical methods. For other cases authors propose sampling or experimental methods to estimate the VC dimension. For this part, most of the results and reasoning follows \cite{cherkassky-learning2007}. For a more broad development of this work, \cite{vapnik-nature2013} is recommended too. Here we present a brief comment on the consistency of the training error to the prediction error and give example bounds for classification learners.
 
 In a supervised learning context, we use the empirical training ($\overline{err}$) or test errors ($\overline{err}_{test}$) to estimate the $EPE$. A particular learner is fit and then used to predict new values. We would have $\mathrm{T} = (\textbf{X},\textbf{Y})$ as our training set of $n$ samples   and $Y = \{0,1 \}$. Now let $\mathcal {F}$ be a class of classifiers where $f: X \rightarrow Y \, \forall f \in \mathcal {F}$. As it was seen before in INSERT CORRECT SECTION, a common problem in supervised learning is overfitting. In practice this is common when $n$ is \textit{small} or when the number of features is \textit{large}. SLT theory provides theory to effectively characterize these dimensions in a constructive way. Analytical bounds are given for a number of algorithms which allows us to estimate the distance between the empirical error and the generalization error.
 
